Resolução dos exercicios

--- a/fixacao/contato.html
+++ b/fixacao/contato.html
@@ -10,13 +10,20 @@
 </head>
 
 <body>
-    <div class="um">
-        <h1>Header</h1>
-    </div>
-    <div class="dois">
-        
-    </div>
-    <div class="seis">Footer</div>
+    <header class="um">
+        <h1><a href="./index.html">Contato</a></h1>
+    </header>
+    <main class="dois">
+        <form action="#">
+            <label for="nome">Nome</label>
+            <input type="text" name="nome" id="nome">
+            <label for="telefone">Telefone</label>
+            <p><input type="text" name="telefone" id="telefone"></p>
+            <label for="notícia">Notícia</label>
+            <input type="text" name="notícia" id="notícia">
+        </form>
+    </main>
+    <footer class="seis">Rodapé</footer>
 
 </body>
 
