--- a/fixacao/index.html
+++ b/fixacao/index.html
@@ -10,44 +10,41 @@
 </head>
 
 <body>
-    <div class="um">
-        <h1>Header</h1>
-    </div>
-    <div class="dois">
-        Main
+    <header class="um">
+        <h1>Site dos patos</h1>
+    </header>
+    <main class="dois">
+    
         <br />
-        <div class="tres">
-            Section
-            <div class="quatro">
-                <p>Article com imagem</p>
-            </div>
+        <section class="tres">
+            
+            <article class="quatro">
+                <p><img src="./media/pato.jpg" width="300" alt="Imagem de Pato"></p>
+            </article>
 
-            <div class="quatro">
-                <p>Article com áudio</p>
-            </div>
-            <div class="quatro">
-                <p>Article com vídeo</p>
+            <article class="quatro">
+                <p><audio src="./media/pato.mp3" controls></audio></p>
+            </article>
+            <article class="quatro">
+                <p><video src="./media/pato.mp4" width="300" controls></video></p>
+            </article>
+        </section>
+        <aside class="cinco">
+            <article class="quatro">
+                ⬅Imagem do pato
+            </article>
 
-            </div>
-        </div>
-        <div class="cinco">
-            Aside
-            <div class="quatro">
-                Article com texto p no aside
-            </div>
-
-            <div class="quatro">
-                Article com texto p no aside
-            </div>
-            <div class="quatro">
-                Article com texto p no aside
-            </div>
-        </div>
-    </div>
-    <div class="seis">
-        <p>Footer</p>
-        <p>Envie sua notícia pra gente clicando aqui</p>
-    </div>
+            <article class="quatro">
+                ⬅Áudio do pato
+            </article>
+            <article class="quatro">
+                ⬅Vídeo do pato
+            </article>
+        </aside>
+    </main>
+    <footer class="seis">
+        <p><a href="./contato.html">Envie sua notícia pra gente clicando aqui</a></p>
+    </footer>
 
 </body>
 
