--- a/tags-formulario.html
+++ b/tags-formulario.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <p>Uma tag <code>form</code> para começar</p>
-    <p>Um label e um input aqui:</p>
-    <p>E um botão para terminar!</p>
+    <form action="#">
+        <label for="nome">Nome</label>
+        <input type="text" name="nome" id="nome">
+        <br>
+        <p><button type="submit">Enviar</button></p>
+    </form>
 
 </body>
 </html>
