--- a/tags-especiais.html
+++ b/tags-especiais.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links</title>
 </head>
+
 <body>
     <!--Link normal aqui-->
+    <a href="#"> Home </a>
+    <p><a href="https://www.labenu.com.br/" target="_blank">Labenu</a></p>
+    <a href="./fixacao/media/pato.jpg">Form</a>
+
 
     <p>Este p pode ser um link</p>
     <span>Este span também!</span>
-    <p>Posso transformar só um trechinho do texto em link também!</p>
+    <p>Posso transformar só um <a href="https://www.uol.com.br/" target="_blank">trechinho</a> do texto em link também!</p>
 
     <!--Tags de mídia-->
-    <p>Vamos adicionar uma imagem aqui:</p>
-
-    <p>Um áudio aqui. </p>
-
-    <p>E um vídeo aqui</p>
+    <p>Imagem de pato 😀</p>
+    <p><img src="./fixacao/media/pato.jpg"width ="30%" alt="Imagem de pato"></p>
+    <p>Áudio de pato de pato 😀</p>
+    <p><audio src="./fixacao/media/pato.mp3" controls> </audio></p>
+    <p>Vídeo de pato 😀</p>
+    <p><video src="./fixacao/media/pato.mp4" controls width="80%"></video></p>
 
 </body>
+
 </html>
